6 урок. Закончил. Сделал сервис (с рациями) и убрал loader details. Вынес все в константы. Лог на активацию авиарижима - работает. (Очень жду каникулы, чтобы самому сделать приложение с фильмами, тк я себя совсем не уверено чувствую с mvvm в некоторых моментах)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,17 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".repository.service.MainService"/>
+        <service android:name=".repository.service.MainService" />
+
+        <service android:name=".repository.service.DetailsService" />
+
+        <receiver
+            android:name=".repository.receiver.MyBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_AIRPLANE_MODE_CHANGE" />
+                <action android:name="myaction" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
