--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.core:core-ktx:1.7.0'
